--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -23,6 +23,7 @@ group("audio_unit_test") {
     "../frameworks/js/napi/audio_renderer/test/unittest/audio_renderer_interrupt_test:js_audio_interrupt_test",
     "../frameworks/native/audiocapturer/test/unittest/capturer_interrupt_test:audio_capturer_interrupt_unit_test",
     "../frameworks/native/audiocapturer/test/unittest/capturer_test:audio_capturer_unit_test",
+    "../frameworks/native/audiocapturer/test/unittest/multiple_capturer_test:multiple_audio_capturer_unit_test",
     "../frameworks/native/audiopolicy/test/unittest/group_manager_test:audio_group_manager_unit_test",
     "../frameworks/native/audiopolicy/test/unittest/manager_test:audio_manager_unit_test",
     "../frameworks/native/audiopolicy/test/unittest/policy_test:audio_policy_unit_test",
