--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -28,12 +28,12 @@ ohos_shared_library("audio") {
     "audio_capturer/include",
     "audio_manager/include",
     "audio_stream_manager/include",
-    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_manager/include",
-    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_capturer/include",
-    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_renderer/include",
-    "//foundation/multimedia/audio_framework/interfaces/kits/js/ringtone_manager/include",
-    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
-    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audioringtone/include",
+    "${audio_fwk_path}/interfaces/kits/js/audio_manager/include",
+    "${audio_fwk_path}/interfaces/kits/js/audio_capturer/include",
+    "${audio_fwk_path}/interfaces/kits/js/audio_renderer/include",
+    "${audio_fwk_path}/interfaces/kits/js/ringtone_manager/include",
+    "${audio_fwk_path}/interfaces/inner_api/native/audiocommon/include",
+    "${audio_fwk_path}/interfaces/inner_api/native/audioringtone/include",
     "${ability_runtime_path}/interfaces/kits/native/ability/native",
     "//foundation/arkui/napi/interfaces/kits",
     "//third_party/libuv/include",
@@ -70,10 +70,10 @@ ohos_shared_library("audio") {
   ]
 
   deps = [
-    "//foundation/multimedia/audio_framework/frameworks/native/audiocapturer:audio_capturer",
-    "//foundation/multimedia/audio_framework/frameworks/native/audiorenderer:audio_renderer",
-    "//foundation/multimedia/audio_framework/services/audio_policy:audio_policy_client",
-    "//foundation/multimedia/audio_framework/services/audio_service:audio_client",
+    "${audio_fwk_path}/frameworks/native/audiocapturer:audio_capturer",
+    "${audio_fwk_path}/frameworks/native/audiorenderer:audio_renderer",
+    "${audio_fwk_path}/services/audio_policy:audio_policy_client",
+    "${audio_fwk_path}/services/audio_service:audio_client",
   ]
 
   defines = []
