innerkits fast impl
Signed-off-by: hezhiqiang19@huawei.com <hezhiqiang19@huawei.com>
Change-Id: I94c42baa0ac2f4cbda00009950c1b3b295e3a026

--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -114,6 +114,7 @@ ohos_shared_library("audio_client") {
     "client/src/audio_stream_manager.cpp",
     "client/src/audio_stream_tracker.cpp",
     "client/src/audio_system_manager.cpp",
+    "client/src/i_audio_stream.cpp",
     "client/src/policy_provider_stub.cpp",
   ]
 
