--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -37,8 +37,6 @@ ohos_shared_library("audio_renderer_sink") {
 
   deps = [ "//foundation/multimedia/audio_framework/frameworks/native/audioutils:audio_utils" ]
 
-  deps += [ multimedia_audio_framework_hdi_audio_client ]
-
   external_deps = [
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_1.0",
@@ -64,8 +62,6 @@ ohos_shared_library("fast_audio_renderer_sink") {
     "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
     "//foundation/multimedia/audio_framework/frameworks/native/audioutils/include",
     "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/sink/common",
-    "//commonlibrary/c_utils/base/include",
-    "//drivers/peripheral/audio/interfaces/include",
   ]
 
   deps = [
@@ -73,10 +69,10 @@ ohos_shared_library("fast_audio_renderer_sink") {
     "//third_party/bounds_checking_function:libsec_shared",
   ]
 
-  deps += [ multimedia_audio_framework_hdi_audio_client ]
-
   external_deps = [
     "c_utils:utils",
+    "drivers_interface_audio:audio_idl_headers",
+    "drivers_interface_audio:libaudio_proxy_1.0",
     "hiviewdfx_hilog_native:libhilog",
     "power_manager:powermgr_client",
   ]
@@ -154,12 +150,7 @@ ohos_shared_library("remote_audio_renderer_sink") {
     "//third_party/bounds_checking_function:libsec_shared",
   ]
 
-  if ("${product_name}" == "m40") {
-    deps += [ "//foundation/distributedhardware/distributed_audio/services/hdfaudioclient:daudio_client" ]
-  } else {
-    deps +=
-        [ "//drivers/peripheral/audio/hal/hdi_binder/proxy:hdi_audio_client" ]
-  }
+  deps += [ "//foundation/distributedhardware/distributed_audio/services/hdfaudioclient:daudio_client" ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
 
