--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -358,6 +358,8 @@ ohos_executable("audio_hdi_device_test") {
 
   external_deps = [
     "c_utils:utils",
+    "drivers_interface_audio:audio_idl_headers",
+    "drivers_interface_audio:libaudio_proxy_1.0",
     "hiviewdfx_hilog_native:libhilog",
     "power_manager:powermgr_client",
   ]
