--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -188,6 +188,7 @@ config("audio_service_config") {
     "${audio_fwk_path}/frameworks/native/audioeffect/include",
     "${audio_fwk_path}/frameworks/native/audioutils/include",
     "${audio_fwk_path}/frameworks/native/audioschedule/include",
+    "${audio_fwk_path}/frameworks/native/playbackcapturer/include",
     "${fwk_native_hdiadapter_path}/sink/bluetooth",
     "${fwk_native_hdiadapter_path}/sink/common",
     "${fwk_native_hdiadapter_path}/sink/file",
@@ -277,6 +278,7 @@ ohos_shared_library("audio_service") {
     "${audio_fwk_path}/frameworks/native/audioeffect:audio_effect",
     "${audio_fwk_path}/frameworks/native/audioschedule:audio_schedule",
     "${audio_fwk_path}/frameworks/native/audioutils:audio_utils",
+    "${audio_fwk_path}/frameworks/native/playbackcapturer:playback_capturer",
     "${fwk_native_hdiadapter_path}/sink:audio_renderer_sink",
     "${fwk_native_hdiadapter_path}/sink:bluetooth_renderer_sink",
     "${fwk_native_hdiadapter_path}/sink:remote_audio_renderer_sink",
