--- a/frameworks/native/pulseaudio/modules/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/BUILD.gn
@@ -19,5 +19,8 @@ group("pa_extend_modules") {
     "effect:module-effect-sink",
     "hdi:module-hdi-sink",
     "hdi:module-hdi-source",
+    "capturer:module-inner-capturer-sink",
+    "capturer:module-receiver-sink",
+    "abstract:module-loopback",
   ]
 }
