--- a/frameworks/native/pulseaudio/modules/abstract/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/abstract/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -17,7 +17,7 @@ import("//foundation/multimedia/audio_framework/config.gni")
 pulseaudio_dir = "//third_party/pulseaudio"
 pulseaudio_build_path = "//third_party/pulseaudio/ohosbuild"
 
-config("cluster_config") {
+config("abstract_config") {
   visibility = [ ":*" ]
 
   include_dirs = [
@@ -27,8 +27,9 @@ config("cluster_config") {
     "$pulseaudio_build_path/src",
     "$pulseaudio_build_path/include",
     "${audio_fwk_path}/interfaces/inner_api/native/audiocommon/include",
-    "${audio_fwk_path}/frameworks/native/audioeffect/include",
-    "${audio_fwk_path}/frameworks/native/playbackcapturer/include",
+    "${audio_fwk_path}/frameworks/native/audioschedule/include",
+    "//drivers/peripheral/audio/interfaces/include",
+    "//commonlibrary/c_utils/base/include",
   ]
 
   cflags = [
@@ -40,25 +41,23 @@ config("cluster_config") {
   ]
 }
 
-ohos_shared_library("module-cluster-sink") {
+ohos_shared_library("module-loopback") {
   sanitize = {
     cfi = true
     debug = false
-    blocklist = "${audio_fwk_path}/cfi_blocklist.txt"
+    blocklist = "//foundation/multimedia/audio_framework/cfi_blocklist.txt"
   }
-  sources = [ "module_cluster_sink.c" ]
+  sources = [ "module_loopback.c" ]
 
-  configs = [ ":cluster_config" ]
+  configs = [ ":abstract_config" ]
 
-  cflags = [ "-DPA_MODULE_NAME=libmodule_cluster_sink_z_so" ]
+  cflags = [ "-DPA_MODULE_NAME=libmodule_loopback_z_so" ]
 
   deps = [
-    "${audio_fwk_path}/frameworks/native/playbackcapturer:playback_capturer",
     "$pulseaudio_build_path/src:pulsecommon",
     "$pulseaudio_build_path/src/pulse:pulse",
     "$pulseaudio_build_path/src/pulsecore:pulsecore",
-    "${audio_fwk_path}/frameworks/native/audioeffect:audio_effect",
-    "${third_party_path}/bounds_checking_function:libsec_shared",
+    "//third_party/bounds_checking_function:libsec_shared",
   ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
