--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -41,6 +41,7 @@ ohos_shared_library("audio") {
     "audio_capturer/src/audio_capturer_callback_napi.cpp",
     "audio_capturer/src/audio_capturer_napi.cpp",
     "audio_capturer/src/audio_parameters_napi.cpp",
+    "audio_capturer/src/audio_capturer_device_change_callback_napi.cpp",
     "audio_capturer/src/capturer_period_position_callback_napi.cpp",
     "audio_capturer/src/capturer_position_callback_napi.cpp",
     "audio_common/src/audio_common_napi.cpp",
