Repair product name to feature value
Signed-off-by: huang-jianfei200 <huangjianfei4@huawei.com>
Change-Id: I4e9fbfaaa550ef2e2c3db394333fbc7fad572fe5

--- a/audio_ohcore.gni
+++ b/audio_ohcore.gni
@@ -10,7 +10,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-if ("${product_name}" == "ohcore") {
+
+import("config.gni")
+
+if (audio_framework_feature_ohcore) {
   audio_gateway_path = "//foundation/multimedia/audio_framework"
   audio_gateway_include_dirs =
       [ "${audio_gateway_path}/frameworks/native/audiocompatibility/include" ]
