--- a/config.gni
+++ b/config.gni
@@ -14,6 +14,8 @@
 declare_args() {
   audio_framework_feature_dtmf_tone = true
   audio_framework_feature_opensl_es = true
+  audio_framework_feature_m40 = false
+  audio_framework_feature_ohcore = false
 
   multimedia_audio_framework_pulse_audio = "//third_party/pulseaudio/include"
 
@@ -26,7 +28,7 @@ declare_args() {
 third_party_path = "//third_party"
 histreamer_ext_dir = "//foundation/multimedia/histreamer_ext"
 
-if ("${product_name}" == "m40" || "${product_name}" == "higeneric") {
+if (audio_framework_feature_m40 || "${product_name}" == "higeneric") {
   close_source_flag = true
 } else {
   close_source_flag = false
