--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -135,7 +135,7 @@ ohos_shared_library("remote_audio_renderer_sink") {
   cflags = [ "-fPIC" ]
   cflags += [ "-Wall" ]
   cflags_cc = cflags
-  if ("${product_name}" == "m40") {
+  if (audio_framework_feature_m40) {
     cflags += [ "-DPRODUCT_M40" ]
   }
 
