hilog/hisysevent/hitrace部件弹性化部署整改
Signed-off-by: liuyifei <liuyifei20@huawei.com>

--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -90,8 +90,8 @@ ohos_shared_library("audio") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:napi_base_context",
     "c_utils:utils",
+    "hilog:libhilog",
     "hiview:libxpower_event_js",
-    "hiviewdfx_hilog_native:libhilog",
     "napi:ace_napi",
     "resource_management:global_resmgr",
   ]
