--- a/frameworks/native/hdiadapter/source/BUILD.gn
+++ b/frameworks/native/hdiadapter/source/BUILD.gn
@@ -37,7 +37,7 @@ ohos_shared_library("audio_capturer_source") {
   external_deps = [
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_1.0",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "power_manager:powermgr_client",
   ]
 
@@ -68,7 +68,7 @@ ohos_shared_library("fast_audio_capturer_source") {
   external_deps = [
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_1.0",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "power_manager:powermgr_client",
   ]
 
@@ -99,7 +99,7 @@ ohos_shared_library("remote_audio_capturer_source") {
 
   external_deps = [
     "distributed_audio:daudio_client",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   part_name = "audio_framework"
@@ -131,7 +131,7 @@ ohos_shared_library("remote_fast_audio_capturer_source") {
   external_deps = [
     "c_utils:utils",
     "distributed_audio:daudio_client",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   part_name = "audio_framework"
@@ -160,7 +160,7 @@ ohos_shared_library("audio_capturer_file_source") {
 
   include_dirs += [ multimedia_audio_framework_drivers ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 
   part_name = "audio_framework"
   subsystem_name = "multimedia"
@@ -201,7 +201,7 @@ ohos_shared_library("capturer_source_adapter") {
     ":remote_fast_audio_capturer_source",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 
   part_name = "audio_framework"
   subsystem_name = "multimedia"
