--- a/frameworks/native/opensles/test/unittest/opensles_recorder_test/BUILD.gn
+++ b/frameworks/native/opensles/test/unittest/opensles_recorder_test/BUILD.gn
@@ -60,5 +60,5 @@ ohos_unittest("audio_opensles_recorder_unit_test") {
 
   deps = [ "../../../../opensles:opensles" ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 }
