--- a/test/fuzztest/audiobluetoothmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/audiobluetoothmanager_fuzzer/BUILD.gn
@@ -54,8 +54,8 @@ ohos_fuzztest("AudioBluetoothManagerFuzzTest") {
     "hdf_core:libhdf_ipc_adapter",
     "hdf_core:libhdi",
     "hdf_core:libpub_utils",
-    "hisysevent_native:libhisysevent",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "init:libbegetutil",
     "input:libmmi-client",
     "ipc:ipc_single",
