--- a/test/fuzztest/audiopolicy_fuzzer/BUILD.gn
+++ b/test/fuzztest/audiopolicy_fuzzer/BUILD.gn
@@ -49,7 +49,7 @@ ohos_fuzztest("AudioPolicyFuzzTest") {
     "hdf_core:libhdf_ipc_adapter",
     "hdf_core:libhdi",
     "hdf_core:libpub_utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "kv_store:distributeddata_inner",
     "safwk:system_ability_fwk",
