--- a/frameworks/native/audiocapturer/test/unittest/capturer_interrupt_test/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/unittest/capturer_interrupt_test/BUILD.gn
@@ -34,5 +34,5 @@ ohos_unittest("audio_capturer_interrupt_unit_test") {
     "../../../../audiorenderer:audio_renderer",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 }
