--- a/frameworks/native/audiocompatibility/BUILD.gn
+++ b/frameworks/native/audiocompatibility/BUILD.gn
@@ -43,7 +43,7 @@ ohos_shared_library("audio_capturer_gateway") {
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
@@ -80,7 +80,7 @@ ohos_shared_library("audio_renderer_gateway") {
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
