--- a/frameworks/native/audiopolicy/test/unittest/policy_test/BUILD.gn
+++ b/frameworks/native/audiopolicy/test/unittest/policy_test/BUILD.gn
@@ -43,7 +43,7 @@ ohos_unittest("audio_policy_unit_test") {
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
