--- a/frameworks/native/audiorenderer/test/unittest/renderer_test/BUILD.gn
+++ b/frameworks/native/audiorenderer/test/unittest/renderer_test/BUILD.gn
@@ -49,7 +49,7 @@ ohos_unittest("audio_renderer_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   resource_config_file =
