--- a/frameworks/native/audiostream/test/unittest/stream_test/BUILD.gn
+++ b/frameworks/native/audiostream/test/unittest/stream_test/BUILD.gn
@@ -37,7 +37,7 @@ ohos_unittest("audio_stream_unit_test") {
   ]
 
   external_deps = [
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
   ]
 
