--- a/frameworks/native/audioutils/BUILD.gn
+++ b/frameworks/native/audioutils/BUILD.gn
@@ -30,8 +30,8 @@ ohos_shared_library("audio_utils") {
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
-    "hitrace_native:hitrace_meter",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "init:libbegetutil",
     "ipc:ipc_single",
   ]
