--- a/frameworks/native/hdiadapter/sink/BUILD.gn
+++ b/frameworks/native/hdiadapter/sink/BUILD.gn
@@ -39,7 +39,7 @@ ohos_shared_library("audio_renderer_sink") {
   external_deps = [
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_1.0",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "power_manager:powermgr_client",
   ]
 
@@ -74,7 +74,7 @@ ohos_shared_library("fast_audio_renderer_sink") {
     "c_utils:utils",
     "drivers_interface_audio:audio_idl_headers",
     "drivers_interface_audio:libaudio_proxy_1.0",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "power_manager:powermgr_client",
   ]
 
@@ -114,7 +114,7 @@ ohos_shared_library("bluetooth_renderer_sink") {
     "hdf_core:libhdf_ipc_adapter",
     "hdf_core:libhdi",
     "hdf_core:libpub_utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "power_manager:powermgr_client",
   ]
 
@@ -154,7 +154,7 @@ ohos_shared_library("remote_audio_renderer_sink") {
 
   external_deps = [
     "distributed_audio:daudio_client",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   part_name = "audio_framework"
@@ -193,7 +193,7 @@ ohos_shared_library("remote_fast_audio_renderer_sink") {
   external_deps = [
     "c_utils:utils",
     "distributed_audio:daudio_client",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   part_name = "audio_framework"
@@ -220,7 +220,7 @@ ohos_shared_library("audio_renderer_file_sink") {
     "../../../../interfaces/inner_api/native/audiocommon/include",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 
   part_name = "audio_framework"
   subsystem_name = "multimedia"
@@ -264,7 +264,7 @@ ohos_shared_library("renderer_sink_adapter") {
     ":remote_fast_audio_renderer_sink",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 
   part_name = "audio_framework"
   subsystem_name = "multimedia"
