--- a/frameworks/native/opensles/BUILD.gn
+++ b/frameworks/native/opensles/BUILD.gn
@@ -93,7 +93,7 @@ if (!audio_framework_feature_opensl_es) {
     ]
 
     external_deps = [
-      "hiviewdfx_hilog_native:libhilog",
+      "hilog:libhilog",
       "ipc:ipc_single",
     ]
 
@@ -159,7 +159,7 @@ if (!audio_framework_feature_opensl_es) {
       ":opensles",
     ]
 
-    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+    external_deps = [ "hilog:libhilog" ]
 
     part_name = "audio_framework"
     subsystem_name = "multimedia"
@@ -186,7 +186,7 @@ if (!audio_framework_feature_opensl_es) {
       ":opensles",
     ]
 
-    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+    external_deps = [ "hilog:libhilog" ]
 
     part_name = "audio_framework"
     subsystem_name = "multimedia"
