--- a/services/audio_service/test/unittest/BUILD.gn
+++ b/services/audio_service/test/unittest/BUILD.gn
@@ -56,8 +56,8 @@ ohos_unittest("audio_balance_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hisysevent_native:libhisysevent",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
