--- a/test/fuzztest/audiostreamcollector_fuzzer/BUILD.gn
+++ b/test/fuzztest/audiostreamcollector_fuzzer/BUILD.gn
@@ -41,7 +41,7 @@ ohos_fuzztest("AudioStreamCollectorFuzzTest") {
     "c_utils:utils",
     "hdf_core:libhdi",
     "hdf_core:libpub_utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "safwk:system_ability_fwk",
   ]
