--- a/test/moduletest/audiopolicy/BUILD.gn
+++ b/test/moduletest/audiopolicy/BUILD.gn
@@ -35,6 +35,6 @@ ohos_moduletest("audio_policy_module_test") {
   deps = [ "../../../services/audio_service:audio_client" ]
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 }
