--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -330,6 +330,7 @@ ohos_executable("audio_process_client_test") {
   ]
 
   external_deps = [
+    "c_utils:utils",
     "hilog:libhilog",
     "init:libbegetutil",
   ]
