--- a/frameworks/native/playbackcapturer/BUILD.gn
+++ b/frameworks/native/playbackcapturer/BUILD.gn
@@ -47,7 +47,7 @@ ohos_shared_library("playback_capturer") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_single",
   ]
 
