--- a/frameworks/native/pulseaudio/modules/cluster/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/cluster/BUILD.gn
@@ -61,7 +61,7 @@ ohos_shared_library("module-cluster-sink") {
     "../../../playbackcapturer:playback_capturer",
   ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 
   subsystem_name = "multimedia"
   part_name = "audio_framework"
