--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,5 +12,5 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- services\audio_policy\common\include\audio_policy_ipc_interface_code.h @leonchan5
- services\audio_service\client\include\pulseaudio_ipc_interface_code.h @leonchan5
+ services/audio_policy/common/include/audio_policy_ipc_interface_code.h @leonchan5
+ services/audio_service/client/include/pulseaudio_ipc_interface_code.h @leonchan5
