Conditional depend on config policy
Signed-off-by: xuewei.gu <xuewei.gu@thundersoft.com>

--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -203,7 +203,6 @@ ohos_shared_library("audio_policy_service") {
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
-    "config_policy:configpolicy_util",
     "device_manager:devicemanagersdk",
     "drivers_interface_audio:audio_idl_headers",
     "hdf_core:libhdf_ipc_adapter",
@@ -217,6 +216,11 @@ ohos_shared_library("audio_policy_service") {
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
+
+  if (audio_framework_config_policy_enable) {
+    defines += [ "USB_CONFIG_POLICY" ]
+    external_deps += [ "config_policy:configpolicy_util" ]
+  }
 
   if (accessibility_enable == true) {
     sources +=
