--- a/config.gni
+++ b/config.gni
@@ -15,6 +15,12 @@ declare_args() {
   audio_framework_feature_dtmf_tone = true
   audio_framework_feature_opensl_es = true
 
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.customization_config_policy)) {
+      audio_framework_config_policy_enable = true
+  } else {
+      audio_framework_config_policy_enable = false
+  }
   multimedia_audio_framework_hdi_audio_client =
       "//drivers/peripheral/audio/hal/hdi_binder/proxy:hdi_audio_client"
   ipc_dir =
