--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -455,3 +455,35 @@ ohos_executable("audio_multichannel_test") {
   part_name = "audio_framework"
   subsystem_name = "multimedia"
 }
+
+ohos_executable("audio_blendmode_test") {
+  install_enable = false
+
+  sources = [ "test/example/audio_blendmode_test.cpp" ]
+
+  configs = [ ":audio_client_public_config" ]
+
+  include_dirs = [
+    "$pulseaudio_build_path/include",
+    "$pulseaudio_dir/confgure/src",
+    "$pulseaudio_dir/include",
+    "$pulseaudio_dir/src",
+    "../../../../foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
+    "../../../../utils/system/safwk/native/include",
+    "../../../../commonlibrary/c_utils/base/include",
+    "//third_party/bounds_checking_function/include",
+  ]
+
+  deps = [
+    ":audio_client",
+    "../../frameworks/native/audiorenderer:audio_renderer",
+  ]
+
+  external_deps = [
+    "hilog:libhilog",
+    "ipc:ipc_single",
+  ]
+
+  part_name = "audio_framework"
+  subsystem_name = "multimedia"
+}
