Add Use Case Coverage
Signed-off-by: liuyuehua1 <liuyuehua1@huawei.com>

--- a/frameworks/native/audiocapturer/test/unittest/multiple_capturer_test/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/unittest/multiple_capturer_test/BUILD.gn
@@ -27,7 +27,11 @@ ohos_unittest("multiple_audio_capturer_unit_test") {
     "-Werror",
   ]
 
-  sources = [ "src/multiple_audio_capturer_unit_test.cpp" ]
+  sources = [
+      "src/multiple_audio_capturer_unit_test.cpp",
+      "src/multiple_audio_capturer_with_wakeup_unit_test.cpp",
+      "src/multiple_audio_capturer_with_playbackcap_unit_test.cpp"
+  ]
 
   deps = [ "../../../../audiocapturer:audio_capturer" ]
 
