--- a/frameworks/native/audiocapturer/test/unittest/capturer_interrupt_test/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/unittest/capturer_interrupt_test/BUILD.gn
@@ -30,6 +30,7 @@ ohos_unittest("audio_capturer_interrupt_unit_test") {
   sources = [ "src/audio_capturer_interrupt_unit_test.cpp" ]
 
   deps = [
+    "../../../../../../services/audio_service:audio_common",
     "../../../../audiocapturer:audio_capturer",
     "../../../../audiorenderer:audio_renderer",
   ]
