--- a/frameworks/native/ohaudio/BUILD.gn
+++ b/frameworks/native/ohaudio/BUILD.gn
@@ -55,6 +55,7 @@ ohos_shared_library("ohaudio") {
   ]
 
   deps = [
+    "../../../services/audio_service:audio_common",
     "../audiocapturer:audio_capturer",
     "../audiorenderer:audio_renderer",
   ]
