--- a/frameworks/native/audiocapturer/BUILD.gn
+++ b/frameworks/native/audiocapturer/BUILD.gn
@@ -92,7 +92,10 @@ ohos_executable("audio_capturer_test") {
 
   configs = [ ":audio_capturer_config" ]
 
-  deps = [ ":audio_capturer" ]
+  deps = [
+    ":audio_capturer",
+    "../../../services/audio_service:audio_common",
+  ]
 
   external_deps = [ "hilog:libhilog" ]
 
