--- a/frameworks/native/audiocapturer/test/benchmark/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/benchmark/BUILD.gn
@@ -22,7 +22,10 @@ ohos_benchmarktest("BenchmarkAudioCapturerTest") {
     "../../../../../interfaces/inner_api/native/audiocommon/include",
   ]
   sources = [ "benchmark_audiocapturer_test.cpp" ]
-  deps = [ "../../../audiocapturer:audio_capturer" ]
+  deps = [
+    "../../../../../services/audio_service:audio_common",
+    "../../../audiocapturer:audio_capturer",
+  ]
 }
 
 group("benchmarktest") {
