--- a/frameworks/native/audiocapturer/test/unittest/capturer_test/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/unittest/capturer_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_unittest("audio_capturer_unit_test") {
 
   deps = [
     "../../../../../../services/audio_service:audio_client",
+    "../../../../../../services/audio_service:audio_common",
     "../../../../audiocapturer:audio_capturer",
   ]
 }
