--- a/frameworks/native/audiopolicy/test/unittest/manager_test/BUILD.gn
+++ b/frameworks/native/audiopolicy/test/unittest/manager_test/BUILD.gn
@@ -32,6 +32,7 @@ ohos_unittest("audio_manager_unit_test") {
 
   deps = [
     "../../../../../../services/audio_service:audio_client",
+    "../../../../../../services/audio_service:audio_common",
     "../../../../audiocapturer:audio_capturer",
     "../../../../audiorenderer:audio_renderer",
   ]
