--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -41,6 +41,7 @@ ohos_shared_library("audio_common") {
   ]
 
   sources = [
+    "common/src/audio_info.cpp",
     "common/src/audio_process_config.cpp",
     "common/src/linear_pos_time_model.cpp",
     "common/src/oh_audio_buffer.cpp",
@@ -326,6 +327,7 @@ ohos_executable("audio_process_client_test") {
 
   deps = [
     ":audio_client",
+    ":audio_common",
     "./../../frameworks/native/audioutils:audio_utils",
   ]
 
