--- a/frameworks/native/audiocapturer/test/benchmark/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/benchmark/BUILD.gn
@@ -23,7 +23,7 @@ ohos_benchmarktest("BenchmarkAudioCapturerTest") {
   ]
   sources = [ "benchmark_audiocapturer_test.cpp" ]
   deps = [
-    "../../../../../services/audio_service:audio_common",
+    "../../../../../services/audio_service:audio_client",
     "../../../audiocapturer:audio_capturer",
   ]
 }
