--- a/frameworks/native/audiopolicy/test/unittest/routing_manager_test/BUILD.gn
+++ b/frameworks/native/audiopolicy/test/unittest/routing_manager_test/BUILD.gn
@@ -36,8 +36,5 @@ ohos_unittest("audio_routing_manager_test") {
     "hilog:libhilog",
   ]
   sources = [ "src/audio_routing_manager_unit_test.cpp" ]
-  deps = [
-    "../../../../../../services/audio_service:audio_client",
-    "../../../../../../services/audio_service:audio_common",
-  ]
+  deps = [ "../../../../../../services/audio_service:audio_client", ]
 }
