--- a/test/fuzztest/audiomanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/audiomanager_fuzzer/BUILD.gn
@@ -35,10 +35,7 @@ ohos_fuzztest("AudioManagerFuzzTest") {
 
   sources = [ "audio_manager_fuzzer.cpp" ]
 
-  deps = [
-    "../../../services/audio_service:audio_client",
-    "../../../services/audio_service:audio_common",
-  ]
+  deps = [ "../../../services/audio_service:audio_client" ]
   external_deps = [ "c_utils:utils" ]
 }
 
