--- a/frameworks/native/audiocapturer/test/unittest/multiple_capturer_test/BUILD.gn
+++ b/frameworks/native/audiocapturer/test/unittest/multiple_capturer_test/BUILD.gn
@@ -29,10 +29,7 @@ ohos_unittest("multiple_audio_capturer_unit_test") {
 
   sources = [ "src/multiple_audio_capturer_unit_test.cpp" ]
 
-  deps = [
-    "../../../../../../services/audio_service:audio_client",
-    "../../../../audiocapturer:audio_capturer",
-  ]
+  deps = [ "../../../../audiocapturer:audio_capturer" ]
 
   external_deps = [ "hilog:libhilog" ]
 }
