primary通路修改和动态加载2
Signed-off-by: yaojingyu2008 <yaojingyu1@huawei.com>

--- a/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
+++ b/frameworks/native/pulseaudio/modules/hdi/BUILD.gn
@@ -84,7 +84,7 @@ ohos_shared_library("module-hdi-sink") {
   ]
 
   external_deps = [ "hilog:libhilog",
-                    "c_utils:utils,
+                    "c_utils:utils",
                      ]
 
   if (ressche_enable == true) {
