--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -140,6 +140,7 @@ ohos_shared_library("audio_policy_service") {
     "server/src/audio_capturer_state_change_listener_proxy.cpp",
     "server/src/audio_client_tracker_callback_proxy.cpp",
     "server/src/audio_group_handle.cpp",
+    "server/src/audio_policy_client_proxy.cpp",
     "server/src/audio_policy_manager_listener_proxy.cpp",
     "server/src/audio_policy_manager_stub.cpp",
     "server/src/audio_policy_server.cpp",
@@ -148,7 +149,6 @@ ohos_shared_library("audio_policy_service") {
     "server/src/audio_routing_manager_listener_proxy.cpp",
     "server/src/audio_stream_collector.cpp",
     "server/src/audio_stream_event_dispatcher.cpp",
-    "server/src/audio_volume_key_event_callback_proxy.cpp",
     "server/src/service/audio_policy_service.cpp",
     "server/src/service/config/audio_focus_parser.cpp",
     "server/src/service/config/audio_volume_parser.cpp",
@@ -335,6 +335,8 @@ ohos_shared_library("audio_policy_client") {
     "../audio_service/client/src/audio_device_descriptor.cpp",
     "client/src/audio_capturer_state_change_listener_stub.cpp",
     "client/src/audio_client_tracker_callback_stub.cpp",
+    "client/src/audio_policy_client_stub.cpp",
+    "client/src/audio_policy_client_stub_impl.cpp",
     "client/src/audio_policy_manager.cpp",
     "client/src/audio_policy_manager_listener_stub.cpp",
     "client/src/audio_policy_proxy.cpp",
@@ -342,7 +344,6 @@ ohos_shared_library("audio_policy_client") {
     "client/src/audio_ringermode_update_listener_stub.cpp",
     "client/src/audio_routing_manager_listener_stub.cpp",
     "client/src/audio_volume_group_info.cpp",
-    "client/src/audio_volume_key_event_callback_stub.cpp",
   ]
 
   public_configs = [ ":audio_policy_client_config" ]
@@ -351,6 +352,7 @@ ohos_shared_library("audio_policy_client") {
 
   external_deps = [
     "c_utils:utils",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_single",
