--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -34,6 +34,10 @@ ohos_shared_library("audio") {
     "../../../interfaces/kits/js/audio_renderer/include",
     "../../../interfaces/inner_api/native/audiocommon/include",
     "//third_party/libuv/include",
+    "common",
+    "audiorenderer",
+    "audiocapturer",
+    "audiomanager",
   ]
 
   sources = [
@@ -66,6 +70,13 @@ ohos_shared_library("audio") {
     "audio_renderer/src/renderer_data_request_callback_napi.cpp",
     "audio_renderer/src/renderer_period_position_callback_napi.cpp",
     "audio_renderer/src/renderer_position_callback_napi.cpp",
+    "audiorenderer/napi_audio_renderer.cpp",
+    "common/napi_async_work.cpp",
+    "common/napi_audio_enum.cpp",
+    "common/napi_audio_error.cpp",
+    "common/napi_param_utils.cpp",
+
+    #"common/napi_audio_entry.cpp",
   ]
 
   deps = [
