修复黄区警告，暂时删除napi_audio_renderer提交
Signed-off-by: Reily <wululu123@huawei.com>

--- a/config.gni
+++ b/config.gni
@@ -41,7 +41,7 @@ declare_args() {
   } else {
     audio_framework_feature_input = false
   }
-
+  audio_framework_feature_new_napi = true
   multimedia_audio_framework_pulse_audio = "//third_party/pulseaudio/include"
 
   multimedia_audio_framework_pulse_audio_src = "//third_party/pulseaudio/src"
