--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -70,14 +70,18 @@ ohos_shared_library("audio") {
     "audio_renderer/src/renderer_data_request_callback_napi.cpp",
     "audio_renderer/src/renderer_period_position_callback_napi.cpp",
     "audio_renderer/src/renderer_position_callback_napi.cpp",
-    "audiorenderer/napi_audio_renderer.cpp",
-    "common/napi_async_work.cpp",
-    "common/napi_audio_enum.cpp",
-    "common/napi_audio_error.cpp",
-    "common/napi_param_utils.cpp",
-
-    #"common/napi_audio_entry.cpp",
   ]
+
+  if (audio_framework_feature_new_napi) {
+    sources += [
+      "common/napi_async_work.cpp",
+      "common/napi_audio_enum.cpp",
+      "common/napi_audio_error.cpp",
+      "common/napi_param_utils.cpp",
+
+      #"common/napi_audio_entry.cpp",
+    ]
+  }
 
   deps = [
     "../../../services/audio_policy:audio_policy_client",
