--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -298,6 +298,7 @@ ohos_shared_library("audio_service") {
     "power_manager:powermgr_client",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "sensor:sensor_interface_native",
   ]
 
   if (ressche_enable == true) {
