add audiovivid support with meta&pcm as input callback as method(unfinished)
Signed-off-by: owenCreeper <ouhanjun3@huawei.com>

--- a/frameworks/native/audioutils/BUILD.gn
+++ b/frameworks/native/audioutils/BUILD.gn
@@ -30,6 +30,7 @@ ohos_shared_library("audio_utils") {
     "./src/audio_channel_blend.cpp",
     "./src/audio_utils.cpp",
     "./src/volume_ramp.cpp",
+    "./src/audio_format_converter_3DA.cpp",
   ]
 
   external_deps = [
