add enable function
Signed-off-by: Wang Chongteng <wangchongteng@huawei.com>

--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -118,6 +118,7 @@ ohos_shared_library("audio_client") {
     "client/src/i_audio_stream.cpp",
     "client/src/microphone_descriptor.cpp",
     "client/src/policy_provider_stub.cpp",
+    "client/src/audio_spatialization_manager.cpp",
   ]
 
   public_configs = [ ":audio_client_public_config" ]
