--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -64,6 +64,7 @@ ohos_shared_library("audio") {
     "audio_manager/src/audio_volume_group_manager_napi.cpp",
     "audio_manager/src/audio_volume_key_event_napi.cpp",
     "audio_manager/src/audio_volume_manager_napi.cpp",
+    "audio_manager/src/audio_spatialization_manager_napi.cpp",
     "audio_renderer/src/audio_renderer_callback_napi.cpp",
     "audio_renderer/src/audio_renderer_device_change_callback_napi.cpp",
     "audio_renderer/src/audio_renderer_napi.cpp",
