--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -52,6 +52,7 @@ config("audio_policy_public_config") {
     "server/include/service/interface",
     "server/include/service/listener",
     "server/include/service/manager",
+    "server/include/service/spatialization",
     "../audio_service/client/include",
     "../audio_service/common/include",
     "../../frameworks/native/audiorenderer/include",
@@ -160,6 +161,7 @@ ohos_shared_library("audio_policy_service") {
     "server/src/service/effect/audio_effect_manager.cpp",
     "server/src/service/listener/device_status_listener.cpp",
     "server/src/service/manager/audio_adapter_manager.cpp",
+    "server/src/service/spatialization/audio_spatialization_service.cpp",
   ]
 
   defines = []
