--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -152,6 +152,7 @@ ohos_shared_library("audio_client") {
     "hisysevent:libhisysevent",
     "init:libbegetutil",
     "ipc:ipc_single",
+    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
