--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -39,6 +39,7 @@ group("audio_unit_test") {
     "../frameworks/native/audioutils/test/unittest:audio_utils_unit_test",
     "../frameworks/native/toneplayer/test/unnittest:audio_toneplayer_unit_test",
     "../services/audio_service/test/unittest:audio_balance_unit_test",
+    "../services/audio_service/test/unittest:audio_device_descriptor_unit_test",
   ]
 
   if (audio_framework_feature_opensl_es) {
