--- a/services/audio_service/BUILD.gn
+++ b/services/audio_service/BUILD.gn
@@ -154,6 +154,7 @@ ohos_shared_library("audio_client") {
     "ipc:ipc_single",
     "power_manager:powermgr_client",
     "samgr:samgr_proxy",
+    "safwk:system_ability_fwk",
   ]
 
   version_script = "../../audio_framework.versionscript"
