--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -58,6 +58,7 @@ ohos_shared_library("audio") {
     "audio_manager/src/audio_micstatechange_callback_napi.cpp",
     "audio_manager/src/audio_renderer_state_callback_napi.cpp",
     "audio_manager/src/audio_ringermode_callback_napi.cpp",
+    "audio_manager/src/audio_rounting_available_devicechange_callback.cpp",
     "audio_manager/src/audio_routing_manager_callback_napi.cpp",
     "audio_manager/src/audio_routing_manager_napi.cpp",
     "audio_manager/src/audio_stream_mgr_napi.cpp",
