--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -10,7 +10,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+# test
 import("//foundation/multimedia/audio_framework/config.gni")
 
 group("audio_unit_test") {
