--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -11,6 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # test
+# test
 import("//foundation/multimedia/audio_framework/config.gni")
 
 group("audio_unit_test") {
