--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -162,6 +162,7 @@ ohos_shared_library("audio_policy_service") {
     "server/src/service/listener/device_status_listener.cpp",
     "server/src/service/manager/audio_adapter_manager.cpp",
     "server/src/service/spatialization/audio_spatialization_service.cpp",
+    "server/src/audio_spatialization_state_change_listener_proxy.cpp",
   ]
 
   defines = []
@@ -347,6 +348,7 @@ ohos_shared_library("audio_policy_client") {
     "client/src/audio_routing_manager_listener_stub.cpp",
     "client/src/audio_volume_group_info.cpp",
     "client/src/audio_volume_key_event_callback_stub.cpp",
+    "client/src/audio_spatialization_state_change_listener_stub.cpp",
   ]
 
   public_configs = [ ":audio_policy_client_config" ]
