--- a/services/audio_policy/BUILD.gn
+++ b/services/audio_policy/BUILD.gn
@@ -142,6 +142,7 @@ ohos_shared_library("audio_policy_service") {
     "server/src/audio_capturer_state_change_listener_proxy.cpp",
     "server/src/audio_client_tracker_callback_proxy.cpp",
     "server/src/audio_group_handle.cpp",
+    "server/src/audio_policy_client_proxy.cpp",
     "server/src/audio_policy_manager_listener_proxy.cpp",
     "server/src/audio_policy_manager_stub.cpp",
     "server/src/audio_policy_server.cpp",
@@ -349,6 +350,8 @@ ohos_shared_library("audio_policy_client") {
     "../audio_service/client/src/microphone_descriptor.cpp",
     "client/src/audio_capturer_state_change_listener_stub.cpp",
     "client/src/audio_client_tracker_callback_stub.cpp",
+    "client/src/audio_policy_client_stub.cpp",
+    "client/src/audio_policy_client_stub_impl.cpp",
     "client/src/audio_policy_manager.cpp",
     "client/src/audio_policy_manager_listener_stub.cpp",
     "client/src/audio_policy_proxy.cpp",
@@ -359,12 +362,18 @@ ohos_shared_library("audio_policy_client") {
     "client/src/audio_volume_key_event_callback_stub.cpp",
   ]
 
+  deps = [ "../../frameworks/native/audioutils:audio_utils" ]
+
   public_configs = [ ":audio_policy_client_config" ]
 
-  include_dirs = [ "//third_party/bounds_checking_function/include" ]
+  include_dirs = [
+    "//third_party/bounds_checking_function/include",
+    "../../frameworks/native/audioutils/include",
+  ]
 
   external_deps = [
     "c_utils:utils",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_single",
